Fix Menu visibility

--- a/css/style.scss
+++ b/css/style.scss
@@ -546,6 +546,7 @@ header .menu {
   background: url(../img/menu-bg.png) center no-repeat;
   background-size: cover;
   width: 100vw;
+  display: none;
   height: 100vh;
   left: 0;
   top: 0;
@@ -3306,4 +3307,7 @@ section.project-details.fp-section .fp-tableCell .project-navigation .nav-button
 
 .visiable{
   display: block !important;
+}
+.flexVisiable{
+  display: flex !important;
 }
